...
    <string name="loading_facebook_exchange_token">Facebook token is exchanged on our server…</string>
    <string name="loading_facebook_login">Facebook login is completed on our server…</string>
    <string name="loading_google_exchange_code">Google+ code is exchanged on our server…</string>
    <string name="loading_google_login">Google+ login is completed on our server…</string>
    <string name="background">Background</string>
    <string name="stage">Stage</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="name_exists">Name already exists</string>
    <string name="no_name">No name</string>
    <string name="is_empty">is empty</string>
...
    <string name="number_of_looks">Looks:</string>
    <string name="number_of_sounds">Sounds:</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
    <string name="insert_below">Insert below</string>
    <string name="sprite">Object</string>
    <string name="sprites">Objects</string>
    <string name="spritelist_background_headline">Background</string>
    <string name="dialog_confirm_delete_object_title">Delete this Object?</string>
    <string name="dialog_confirm_delete_multiple_objects_title">Delete these Objects?</string>
    <string name="dialog_confirm_delete_object_message">This cannot be undone!</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="backpack_replace_object">The object "%1$s" already exists in the backpack. Do you want to replace it?</string>
...
    <string name="add_sound_from_recorder">Record Sound</string>
    <string name="add_sound_choose_file">Select File</string>
    <string name="add_sound_pocketmusic">Pocketmusic</string>


    <!-- New project dialog -->
    <string name="new_project_dialog_title">New Program</string>
    <string name="new_project_dialog_hint">My Program</string>
    <string name="new_project_description_dialog_hint">My description</string>
    <string name="new_project_name">Program name</string>
    <string name="new_project_empty">Create empty Program</string>
    <string name="new_project_default">Create example Program</string>
    <string name="new_project_default_drone">Create example Drone Program</string>
    <string name="project_orientation_title">Orientation:</string>
    <!--  -->


    <!-- New sprite dialog -->
    <string name="new_sprite_dialog_default_sprite_name">My Object</string>
    <string name="new_sprite_dialog_title">New Object</string>
    <string name="spritename_already_exists">Please choose another Object name.</string>
    <string name="rename_sprite_dialog">Rename Object</string>
    <string name="spritename_invalid">This object name is invalid</string>
    <string name="no_spritename_entered">Please enter an object name.</string>
    <string name="sprite_name">Object name:</string>
    <!--  -->
...
